crates/patok-tui/tests/snapshots/overlay__the_help_box_sits_under_the_list_on_a_narrow_body.snap
---
source: crates/patok-tui/tests/overlay.rs
expression: screen
---
            ┌ Builder | Claude ────────────────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                                         │
      ↓     │                                                                                      │
[   Plan   ]│                                                                                      │
     ┌────────────────────────────────── Settings -- Patok ──────────────────────────── [ x ] ┐    │
[  Bu│▶ ▾ Provider and model                                                                 █│    │
     │      engine version: 0.1.0                                                            █│────┘
[  Re│      shell version: 0.0.0                                                             █│────┐
     │      provider  ‹ claude ›                                                             █│    │
[ Dis│      model  (not set)                                                                 █│    │
     │      research provider  ‹ claude ›                                                    █│    │
     │      research model  sonnet                                                           █│    │
     │      planner provider  ‹ claude ›                                                     █│    │
     │      planner model  opus                                                              █│    │
     │      builder provider  ‹ claude ›                                                     ││    │
     │      builder model  opus                                                              ││    │
     │      reviewer provider  ‹ claude ›                                                    ││    │
     │      reviewer model  sonnet                                                           ││    │
     │      discovery provider  ‹ claude ›                                                   ││    │
     │      discovery model  opus                                                            ││    │
     │  ▾ Pipeline                                                                           ││    │
     │      run mode  ‹ sprint ›                                                             ││    │
     │      [ ] plan enabled                                                                 ││    │
     │      [ ] skip planner for simple                                                      ││    │
     │      [ ] skip research for simple                                                     ││    │
     │┌───────────────────────────────── Provider and model ─────────────────────────────────┐│    │
     ││Which CLI provider and model the agent roles run on. A change applies at the next task││    │
     ││or agent start; whatever is already running keeps the value it started with.          ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     ││                                                                                      ││    │
     │└──────────────────────────────────────────────────────────────────────────────────────┘│    │
     │                                                                                        │    │
     │ ↑↓ move · Enter/Space edit · ←→ fold/cycle                               [ Esc ] Close │    │
     └────────────────────────────────────────────────────────────────────────────────────────┘    │
            │                                                                                      │
            │ a add tasks · i inject task · Enter start · ↑↓ scroll · Tab output                   │
            └──────────────────────────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                                        [ Enter ] start  [ m ] menu
